# MosaicSDF

./: .gitignore  README.md  config.py  pyproject.toml
data/: io.py
data/objaverse/: preprocess.py
debug/: msdf.py
scripts/: optimize_msdf.py
test/: msdf_test.py
utils/: mesh.py  msdf.py  vis.py
vae/: data.py  eval.py  filtering.py  model.py  train.py
