[tool.poetry]
name = "mosaicsdf"
version = "0.1.0"
description = ""
authors = ["Dzmitry Pranchuk <d.pranchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
pytorch3d = "^0.7.4"
fire = "^0.6.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
