[tool.poetry]
name = "mosaicsdf"
version = "0.1.0"
description = ""
authors = ["Dzmitry Pranchuk <d.pranchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.18"
fire = "^0.6.0"
tqdm = "^4.66.2"
torch = "^2.2.1"
open3d = "^0.18.0"
trimesh = "^4.2.0"
scikit-learn = "^1.4.1.post1"
addict = "^2.4.0"
pandas = "^2.2.1"
pyvista = "^0.43.4"
rtree = "^1.2.0"
taichi = "1.6.0"
pysdf = "^0.1.9"
scikit-image = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
